# WeirdFictionRAG

./: .gitignore  README.md  pyproject.toml
ai/: chunk.py  embed.py
api/: example.http  main.py  routers.py  schemas.py
app/: embed.py
data/: character.md  fiction.md  novel.md  world.md
